[gd_scene load_steps=2 format=2]

[ext_resource path="res://GameComponents/ArenaPickups/SpawningArea/arena_pickup_spawning_area.gd" type="Script" id=1]

[node name="ArenaPickupSpawningArea" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawningArea0" type="ColorRect" parent="."]
margin_left = 200.0
margin_top = 200.0
margin_right = 250.0
margin_bottom = 250.0
rect_min_size = Vector2( 50, 50 )
color = Color( 0.25098, 0.501961, 0.25098, 0.501961 )

[node name="SpawningArea1" type="ColorRect" parent="."]
margin_left = 1030.0
margin_top = 200.0
margin_right = 1080.0
margin_bottom = 250.0
rect_min_size = Vector2( 50, 50 )
color = Color( 0.501961, 1, 0.501961, 0.501961 )

[node name="ArenaPickups" type="Node2D" parent="."]
